Use Paths.get for Java 8 compatibility