@@ -4,6 +4,7 @@ import io.zonky.test.db.postgres.embedded.EmbeddedPostgres;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.sql.Connection;
 import java.sql.SQLException;
 import java.sql.Statement;
@@ -27,7 +28,7 @@ public final class EmbeddedPostgresServer {
             return;
         }
         try {
-            Path dataDir = Path.of("embedded-pg-data");
+            Path dataDir = Paths.get("embedded-pg-data");
             Files.createDirectories(dataDir);
             POSTGRES = EmbeddedPostgres.builder()
                     .setPort(cfg.getPort())
